--- a/Ib.Xamarin.CacheUtils.csproj
+++ b/Ib.Xamarin.CacheUtils.csproj
@@ -35,5 +35,9 @@
     <Compile Update="**\*.xaml.cs" DependentUpon="%(Filename)" />
     <EmbeddedResource Include="**\*.xaml" SubType="Designer" Generator="MSBuild:UpdateDesignTimeXaml" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Remove=".gitignore" />
+  </ItemGroup>
   
 </Project>
