--- a/Ib.Xamarin.CacheUtils.csproj
+++ b/Ib.Xamarin.CacheUtils.csproj
@@ -17,7 +17,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <PackageProjectUrl>https://github.com/jacktux/Xamarin-CacheUtils</PackageProjectUrl>
-    <PackageTags>Xamarin Cache</PackageTags>
+    <PackageTags>xamarin-forms cache caching xamarin http restful rest json object</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
