--- a/Ib.Xamarin.CacheUtils.csproj
+++ b/Ib.Xamarin.CacheUtils.csproj
@@ -10,8 +10,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
     <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8;portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10</PackageTargetFallback>
-    <Company />
-    <Authors>jack_tux</Authors>
+    <Company>jacktux</Company>
+    <Authors>jacktux</Authors>
     <Description>Simple Http and Object caching</Description>
     <Version>1.0.0</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
