--- a/Ib.Xamarin.CacheUtils.csproj
+++ b/Ib.Xamarin.CacheUtils.csproj
@@ -13,9 +13,9 @@
     <Company>jacktux</Company>
     <Authors>jacktux</Authors>
     <Description>Simple Http and Object caching</Description>
-    <Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <Version>2.0.0-rc1</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <PackageProjectUrl>https://github.com/jacktux/Xamarin-CacheUtils</PackageProjectUrl>
     <PackageTags>xamarin-forms cache caching xamarin http restful rest json object</PackageTags>
   </PropertyGroup>
@@ -26,6 +26,7 @@
     <PackageReference Include="akavache.sqlite3" Version="5.0.0" />
     <PackageReference Include="modernhttpclient" Version="2.4.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.0.3" />
   </ItemGroup>
 
   <ItemGroup>
