--- a/Ib.Xamarin.CacheUtils.csproj
+++ b/Ib.Xamarin.CacheUtils.csproj
@@ -8,23 +8,22 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8;portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10</PackageTargetFallback>
     <Company>jacktux</Company>
     <Authors>jacktux</Authors>
     <Description>Simple Http and Object caching</Description>
-    <Version>2.0.0-rc1</Version>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
+    <Version>2.1.0-rc1</Version>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+    <FileVersion>2.1.0.0</FileVersion>
     <PackageProjectUrl>https://github.com/jacktux/Xamarin-CacheUtils</PackageProjectUrl>
     <PackageTags>xamarin-forms cache caching xamarin http restful rest json object</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="akavache" Version="5.0.0" />
-    <PackageReference Include="akavache.core" Version="5.0.0" />
-    <PackageReference Include="akavache.sqlite3" Version="5.0.0" />
-    <PackageReference Include="modernhttpclient" Version="2.4.2" />
+    <PackageReference Include="akavache" Version="6.0.0-alpha0038" />
+    <PackageReference Include="akavache.core" Version="6.0.0-alpha0038" />
+    <PackageReference Include="akavache.sqlite3" Version="6.0.0-alpha0038" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.0.3" />
   </ItemGroup>
